# sspm

./: Cargo.toml  README.md  rustfmt.toml  sspm.toml
src/: app.rs  config.rs  main.rs  process.rs  ui.rs
